docs: update thesis

--- a/references.bib
+++ b/references.bib
@@ -1,4 +1,39 @@
 
+@article{hill_bayesian_2011,
+	title = {Bayesian {Nonparametric} {Modeling} for {Causal} {Inference}},
+	volume = {20},
+	issn = {1061-8600},
+	url = {https://doi.org/10.1198/jcgs.2010.08162},
+	doi = {10.1198/jcgs.2010.08162},
+	abstract = {Researchers have long struggled to identify causal effects in nonexperimental settings. Many recently proposed strategies assume ignorability of the treatment assignment mechanism and require fitting two models—one for the assignment mechanism and one for the response surface. This article proposes a strategy that instead focuses on very flexibly modeling just the response surface using a Bayesian nonparametric modeling procedure, Bayesian Additive Regression Trees (BART). BART has several advantages: it is far simpler to use than many recent competitors, requires less guesswork in model fitting, handles a large number of predictors, yields coherent uncertainty intervals, and fluidly handles continuous treatment variables and missing data for the outcome variable. BART also naturally identifies heterogeneous treatment effects. BART produces more accurate estimates of average treatment effects compared to propensity score matching, propensity-weighted estimators, and regression adjustment in the nonlinear simulation situations examined. Further, it is highly competitive in linear settings with the “correct” model, linear regression. Supplemental materials including code and data to replicate simulations and examples from the article as well as methods for population inference are available online.},
+	number = {1},
+	urldate = {2023-06-21},
+	journal = {Journal of Computational and Graphical Statistics},
+	author = {Hill, Jennifer L.},
+	month = jan,
+	year = {2011},
+	keywords = {Bayesian, Causal inference, Nonparametrics},
+	pages = {217--240},
+}
+
+@article{lorenz_polymerase_2012,
+	title = {Polymerase {Chain} {Reaction}: {Basic} {Protocol} {Plus} {Troubleshooting} and {Optimization} {Strategies}},
+	issn = {1940-087X},
+	shorttitle = {Polymerase {Chain} {Reaction}},
+	url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4846334/},
+	doi = {10.3791/3998},
+	abstract = {In the biological sciences there have been technological advances that catapult the discipline into golden ages of discovery. For example, the field of microbiology was transformed with the advent of Anton van Leeuwenhoek's microscope, which allowed scientists to visualize prokaryotes for the first time. The development of the polymerase chain reaction (PCR) is one of those innovations that changed the course of molecular science with its impact spanning countless subdisciplines in biology. The theoretical process was outlined by Keppe and coworkers in 1971; however, it was another 14 years until the complete PCR procedure was described and experimentally applied by Kary Mullis while at Cetus Corporation in 1985. Automation and refinement of this technique progressed with the introduction of a thermal stable DNA polymerase from the bacterium Thermus aquaticus, consequently the name Taq DNA polymerase., PCR is a powerful amplification technique that can generate an ample supply of a specific segment of DNA (i.e., an amplicon) from only a small amount of starting material (i.e., DNA template or target sequence). While straightforward and generally trouble-free, there are pitfalls that complicate the reaction producing spurious results. When PCR fails it can lead to many non-specific DNA products of varying sizes that appear as a ladder or smear of bands on agarose gels. Sometimes no products form at all. Another potential problem occurs when mutations are unintentionally introduced in the amplicons, resulting in a heterogeneous population of PCR products. PCR failures can become frustrating unless patience and careful troubleshooting are employed to sort out and solve the problem(s). This protocol outlines the basic principles of PCR, provides a methodology that will result in amplification of most target sequences, and presents strategies for optimizing a reaction. By following this PCR guide, students should be able to: ● Set up reactions and thermal cycling conditions for a conventional PCR experiment ● Understand the function of various reaction components and their overall effect on a PCR experiment ● Design and optimize a PCR experiment for any DNA template ● Troubleshoot failed PCR experiments},
+	number = {63},
+	urldate = {2023-06-11},
+	journal = {Journal of Visualized Experiments : JoVE},
+	author = {Lorenz, Todd C.},
+	month = may,
+	year = {2012},
+	pmid = {22664923},
+	pmcid = {PMC4846334},
+	pages = {3998},
+}
+
 @article{mullis_specific_1986,
 	title = {Specific enzymatic amplification of {DNA} in vitro: the polymerase chain reaction},
 	volume = {51 Pt 1},
@@ -5048,7 +5083,7 @@ Five publicly available gene expression cohorts comparing SIRS/trauma to sepsis 
 	pages = {694},
 }
 
-@article{mayhew_generalizable_2020,
+@article{mayhew_generalizable_2020-1,
 	title = {A generalizable 29-{mRNA} neural-network classifier for acute bacterial and viral infections},
 	volume = {11},
 	copyright = {2020 The Author(s)},
