--- a/thesis.tex
+++ b/thesis.tex
@@ -91,6 +91,7 @@ colorlinks,linkcolor=black,citecolor=blue,urlcolor=blue,breaklinks = true
 \newacronym{rct}{RCT}{randomised controlled trial}
 \newacronym[plural = ANNs, firstplural = artificial neural networks]{ann}{ANN}{artificial neural network}
 \newacronym{vcf}{VCF}{variant called format}
+\newacronym{ipm}{IPM}{integral probability metric}
 
 % \newglossaryentry{latex}
 % {
@@ -205,9 +206,7 @@ I'm going to keep adding to this list of sections that are broadly speaking read
 \subfile{chapters/chapter1}
 
 
-\chapter{Hierarchical Bayesian modeling identifies key considerations in the
-development of quantitative loop-mediated isothermal amplification
-assays \label{chap:lamp_modelling}}
+\chapter{Bayesian analysis for optimising the LAMP gene expression assay \label{chap:lamp_modelling}}
 
 \subfile{chapters/chapter2}
 
@@ -215,7 +214,7 @@ assays \label{chap:lamp_modelling}}
 
 \subfile{chapters/chapter3}
 
-\chapter{Causal prediction of survival after immunotherapy with genomic mutation signatures \label{chap:causal_genomics}}
+\chapter{Causal survival analysis in oncology\label{chap:causal_genomics}}
 
 \subfile{chapters/chapter4}
 
