docs: update thesis

--- a/references.bib
+++ b/references.bib
@@ -1,4 +1,179 @@
 
+@misc{athey_estimating_2019,
+	title = {Estimating {Treatment} {Effects} with {Causal} {Forests}: {An} {Application}},
+	shorttitle = {Estimating {Treatment} {Effects} with {Causal} {Forests}},
+	url = {http://arxiv.org/abs/1902.07409},
+	doi = {10.48550/arXiv.1902.07409},
+	abstract = {We apply causal forests to a dataset derived from the National Study of Learning Mindsets, and consider resulting practical and conceptual challenges. In particular, we discuss how causal forests use estimated propensity scores to be more robust to confounding, and how they handle data with clustered errors.},
+	urldate = {2023-07-02},
+	publisher = {arXiv},
+	author = {Athey, Susan and Wager, Stefan},
+	month = feb,
+	year = {2019},
+	note = {arXiv:1902.07409 [stat]},
+	keywords = {Statistics - Methodology},
+}
+
+@incollection{paszke_pytorch_2019,
+	address = {Red Hook, NY, USA},
+	title = {{PyTorch}: an imperative style, high-performance deep learning library},
+	shorttitle = {{PyTorch}},
+	abstract = {Deep learning frameworks have often focused on either usability or speed, but not both. PyTorch is a machine learning library that shows that these two goals are in fact compatible: it provides an imperative and Pythonic programming style that supports code as a model, makes debugging easy and is consistent with other popular scientific computing libraries, while remaining efficient and supporting hardware accelerators such as GPUs. In this paper, we detail the principles that drove the implementation of PyTorch and how they are reflected in its architecture. We emphasize that every aspect of PyTorch is a regular Python program under the full control of its user. We also explain how the careful and pragmatic implementation of the key components of its runtime enables them to work together to achieve compelling performance. We demonstrate the efficiency of individual subsystems, as well as the overall speed of PyTorch on several common benchmarks.},
+	number = {721},
+	urldate = {2023-06-30},
+	booktitle = {Proceedings of the 33rd {International} {Conference} on {Neural} {Information} {Processing} {Systems}},
+	publisher = {Curran Associates Inc.},
+	author = {Paszke, Adam and Gross, Sam and Massa, Francisco and Lerer, Adam and Bradbury, James and Chanan, Gregory and Killeen, Trevor and Lin, Zeming and Gimelshein, Natalia and Antiga, Luca and Desmaison, Alban and Köpf, Andreas and Yang, Edward and DeVito, Zach and Raison, Martin and Tejani, Alykhan and Chilamkurthy, Sasank and Steiner, Benoit and Fang, Lu and Bai, Junjie and Chintala, Soumith},
+	month = dec,
+	year = {2019},
+	pages = {8026--8037},
+}
+
+@inproceedings{nie_learning_2017,
+	title = {Learning {Objectives} for {Treatment} {Effect} {Estimation}},
+	url = {https://www.semanticscholar.org/paper/Learning-Objectives-for-Treatment-Effect-Estimation-Nie-Wager/ea4194b6faaf2882eca5c2edc70b8dd28dfa3592},
+	abstract = {We develop a general class of two-step algorithms for heterogeneous treatment effect estimation in observational studies. We first estimate marginal effects and treatment propensities to form an objective function that isolates the heterogeneous treatment effects, and then optimize the learned objective. This approach has several advantages over existing methods. From a practical perspective, our method is very flexible and easy to use: In both steps, we can use any method of our choice, e.g., penalized regression, a deep net, or boosting; moreover, these methods can be fine-tuned by cross-validating on the learned objective. Meanwhile, in the case of penalized kernel regression, we show that our method has a quasi-oracle property, whereby even if our pilot estimates for marginal effects and treatment propensities are not particularly accurate, we achieve the same regret bounds as an oracle who has a-priori knowledge of these nuisance components. We implement variants of our method based on both penalized regression and convolutional neural networks, and find promising performance relative to existing baselines.},
+	urldate = {2023-06-30},
+	author = {Nie, Xinkun and Wager, Stefan},
+	month = dec,
+	year = {2017},
+}
+
+@article{stone_assumptions_1993,
+	title = {The {Assumptions} on {Which} {Causal} {Inferences} {Rest}},
+	volume = {55},
+	issn = {0035-9246},
+	url = {https://www.jstor.org/stable/2346206},
+	abstract = {Statisticians commonly make causal inferences from the results of randomized experiments, but usually question causal inferences from observational studies on the grounds that untestable assumptions are required. This paper explains the basis for this situation and examines, within quite a general framework, various assumptions that appear in the literature. It is demonstrated how the role of each assumption is intimately related to the sort of causal inference being considered. Contrary to general belief, it is shown that neither `no confounding' nor `randomization' are sufficient assumptions for testing the fundamental causal hypothesis of `no causation'. They become sufficient, however, if supplemented by a `modelling' assumption for how unobserved covariates affect potential responses. Without supplementary assumptions, no confounding and randomization allow testing of weaker but more important hypotheses, such as `no mean effect'. This follows from the sufficiency of an assumption of `ignorable treatment assignment' for testing the hypothesis of `no distribution effect'. It is argued that these ideas will have some operational relevance if we can quantify our beliefs about how closely assumptions hold. To illustrate, a novel form of sensitivity analysis is contrasted with an analysis presented by Rosenbaum and Rubin.},
+	number = {2},
+	urldate = {2023-06-30},
+	journal = {Journal of the Royal Statistical Society. Series B (Methodological)},
+	author = {Stone, Richard},
+	year = {1993},
+	pages = {455--466},
+}
+
+@article{putzu_duration_2023,
+	title = {Duration of {Immunotherapy} in {Non}-{Small} {Cell} {Lung} {Cancer} {Survivors}: {A} {Lifelong} {Commitment}?},
+	volume = {15},
+	issn = {2072-6694},
+	shorttitle = {Duration of {Immunotherapy} in {Non}-{Small} {Cell} {Lung} {Cancer} {Survivors}},
+	url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9913378/},
+	doi = {10.3390/cancers15030689},
+	abstract = {Simple Summary
+Lung cancer is one of the most common human cancers and the leading cause of cancer-related mortality worldwide. The advent of immunotherapy for the treatment of non-small cell lung cancer has significantly improved progression-free survival, overall survival, and the patient’s quality of life in comparison to chemotherapy. Currently, it is estimated that long-term survival can be achieved in more than 15\% of patients treated with immunotherapy. Therefore, the optimal duration of immunotherapy in long survivors needs to be established to avoid overtreatment, side effects, and high costs and at the same time, protect them from potential disease relapse. The aim of this review is to discuss all the aspects related to the optimal duration of immunotherapy in long survivors with non-small cell lung cancer.
+
+Abstract
+Lung cancer is one of the most common human malignancies and the leading cause of cancer-related death worldwide. Novel therapeutic approaches, like targeted therapies against specific molecular alterations and immunotherapy, have revolutionized in the last decade the oncological outcomes in patients affected by non-small cell lung cancer (NSCLC). The advent of immunotherapy for the treatment of NSCLC has significantly improved overall and progression-free survival, as well as the patient’s quality of life in comparison to traditional chemotherapy. Currently, it is estimated that long-term survival can be achieved in more than 15\% of NSCLC patients treated with immunotherapy. Therefore, the optimal duration of immunotherapy in long survivors needs to be established to avoid overtreatment, side effects, and high costs and at the same time, protect them from potential disease relapse or progression. We performed a narrative review to discuss all the aspects related to the optimal duration of immunotherapy in long survivors with NSCLC. Data regarding the duration of immunotherapy in the most impacting clinical trials were collected, along with data regarding the impact of toxicities, side effects, and costs for healthcare providers. In addition, the two-year immunotherapy scheme in patients who benefit from first-line or subsequent treatment lines are examined, and the need for biomarkers that can predict outcomes during and after immunotherapy cessation in patients affected by NSCLC are discussed.},
+	number = {3},
+	urldate = {2023-06-29},
+	journal = {Cancers},
+	author = {Putzu, Carlo and Canova, Stefania and Paliogiannis, Panagiotis and Lobrano, Renato and Sala, Luca and Cortinovis, Diego Luigi and Colonese, Francesca},
+	month = jan,
+	year = {2023},
+	pmid = {36765647},
+	pmcid = {PMC9913378},
+	pages = {689},
+}
+
+@article{katzman_deepsurv_2018,
+	title = {{DeepSurv}: personalized treatment recommender system using a {Cox} proportional hazards deep neural network},
+	volume = {18},
+	issn = {1471-2288},
+	shorttitle = {{DeepSurv}},
+	url = {https://doi.org/10.1186/s12874-018-0482-1},
+	doi = {10.1186/s12874-018-0482-1},
+	abstract = {Medical practitioners use survival models to explore and understand the relationships between patients’ covariates (e.g. clinical and genetic features) and the effectiveness of various treatment options. Standard survival models like the linear Cox proportional hazards model require extensive feature engineering or prior medical knowledge to model treatment interaction at an individual level. While nonlinear survival methods, such as neural networks and survival forests, can inherently model these high-level interaction terms, they have yet to be shown as effective treatment recommender systems.},
+	number = {1},
+	urldate = {2023-06-28},
+	journal = {BMC Medical Research Methodology},
+	author = {Katzman, Jared L. and Shaham, Uri and Cloninger, Alexander and Bates, Jonathan and Jiang, Tingting and Kluger, Yuval},
+	month = feb,
+	year = {2018},
+	keywords = {Deep learning, Survival analysis, Treatment recommendations},
+	pages = {24},
+}
+
+@article{chapfuwa_adversarial_2018,
+	title = {Adversarial {Time}-to-{Event} {Modeling}},
+	volume = {80},
+	issn = {2640-3498},
+	url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8025546/},
+	abstract = {Modern health data science applications leverage abundant molecular and electronic health data, providing opportunities for machine learning to build statistical models to support clinical practice. Time-to-event analysis, also called survival analysis, stands as one of the most representative examples of such statistical models. We present a deep-network-based approach that leverages adversarial learning to address a key challenge in modern time-to-event modeling: nonparametric estimation of event-time distributions. We also introduce a principled cost function to exploit information from censored events (events that occur subsequent to the observation window). Unlike most time-to-event models, we focus on the estimation of time-to-event distributions, rather than time ordering. We validate our model on both benchmark and real datasets, demonstrating that the proposed formulation yields significant performance gains relative to a parametric alternative, which we also propose.},
+	urldate = {2023-06-28},
+	journal = {Proceedings of machine learning research},
+	author = {Chapfuwa, Paidamoyo and Tao, Chenyang and Li, Chunyuan and Page, Courtney and Goldstein, Benjamin and Carin, Lawrence and Henao, Ricardo},
+	month = jul,
+	year = {2018},
+	pmid = {33834174},
+	pmcid = {PMC8025546},
+	pages = {735--744},
+}
+
+@article{sriperumbudur_empirical_2012,
+	title = {On the empirical estimation of integral probability metrics},
+	volume = {6},
+	issn = {1935-7524, 1935-7524},
+	url = {https://projecteuclid.org/journals/electronic-journal-of-statistics/volume-6/issue-none/On-the-empirical-estimation-of-integral-probability-metrics/10.1214/12-EJS722.full},
+	doi = {10.1214/12-EJS722},
+	abstract = {Given two probability measures, \${\textbackslash}mathbb\{P\}\$ and \${\textbackslash}mathbb\{Q\}\$ defined on a measurable space, \$S\$, the integral probability metric (IPM) is defined as \$\${\textbackslash}gamma\_\{{\textbackslash}mathcal\{F\}\}({\textbackslash}mathbb\{P\},{\textbackslash}mathbb\{Q\})={\textbackslash}sup{\textbackslash}left{\textbackslash}\{{\textbackslash}left{\textbackslash}vert {\textbackslash}int\_\{S\}f{\textbackslash},d{\textbackslash}mathbb\{P\}-{\textbackslash}int\_\{S\}f{\textbackslash},d{\textbackslash}mathbb\{Q\}{\textbackslash}right{\textbackslash}vert{\textbackslash},:{\textbackslash},f{\textbackslash}in{\textbackslash}mathcal\{F\}{\textbackslash}right{\textbackslash}\},\$\$ where \${\textbackslash}mathcal\{F\}\$ is a class of real-valued bounded measurable functions on \$S\$. By appropriately choosing \${\textbackslash}mathcal\{F\}\$, various popular distances between \${\textbackslash}mathbb\{P\}\$ and \${\textbackslash}mathbb\{Q\}\$, including the Kantorovich metric, Fortet-Mourier metric, dual-bounded Lipschitz distance (also called the Dudley metric), total variation distance, and kernel distance, can be obtained. In this paper, we consider the problem of estimating \${\textbackslash}gamma\_\{{\textbackslash}mathcal\{F\}\}\$ from finite random samples drawn i.i.d. from \${\textbackslash}mathbb\{P\}\$ and \${\textbackslash}mathbb\{Q\}\$. Although the above mentioned distances cannot be computed in closed form for every \${\textbackslash}mathbb\{P\}\$ and \${\textbackslash}mathbb\{Q\}\$, we show their empirical estimators to be easily computable, and strongly consistent (except for the total-variation distance). We further analyze their rates of convergence. Based on these results, we discuss the advantages of certain choices of \${\textbackslash}mathcal\{F\}\$ (and therefore the corresponding IPMs) over others—in particular, the kernel distance is shown to have three favorable properties compared with the other mentioned distances: it is computationally cheaper, the empirical estimate converges at a faster rate to the population value, and the rate of convergence is independent of the dimension \$d\$ of the space (for \$S={\textbackslash}mathbb\{R\}{\textasciicircum}\{d\}\$). We also provide a novel interpretation of IPMs and their empirical estimators by relating them to the problem of binary classification: while the IPM between class-conditional distributions is the negative of the optimal risk associated with a binary classifier, the smoothness of an appropriate binary classifier (e.g., support vector machine, Lipschitz classifier, etc.) is inversely related to the empirical estimator of the IPM between these class-conditional distributions.},
+	number = {none},
+	urldate = {2023-06-27},
+	journal = {Electronic Journal of Statistics},
+	author = {Sriperumbudur, Bharath K. and Fukumizu, Kenji and Gretton, Arthur and Schölkopf, Bernhard and Lanckriet, Gert R. G.},
+	month = jan,
+	year = {2012},
+	keywords = {62G05, Integral probability metrics, Kantorovich metric, Lipschitz classifier, Rademacher average, Support Vector Machine, dual-bounded Lipschitz distance (Dudley metric), empirical estimation, kernel distance, ‎reproducing kernel Hilbert ‎space},
+	pages = {1550--1599},
+}
+
+@incollection{gretton_covariate_2008,
+	title = {Covariate {Shift} by {Kernel} {Mean} {Matching}},
+	isbn = {9780262170055},
+	url = {https://doi.org/10.7551/mitpress/9780262170055.003.0008},
+	abstract = {This chapter addresses the problem of distribution matching between training and test stages. It proposes a method called kernel mean matching, which allows direct estimation of the importance weight without going through density estimation. The chapter then relates the re-weighted estimation approaches to local learning, where labels on test data are estimated given a subset of training data in a neighborhood of the test point. Examples are nearest-neighbor estimators and Watson–Nadaraya-type estimators. The chapter also provides detailed proofs concerning the statistical properties of the kernel mean matching estimator, and detailed experimental analyses for both covariate shift and local learning.},
+	urldate = {2023-06-27},
+	booktitle = {Dataset {Shift} in {Machine} {Learning}},
+	publisher = {The MIT Press},
+	author = {Gretton, Arthur and Smola, Alex and Huang, Jiayuan and Schmittfull, Marcel and Borgwardt, Karsten and Schölkopf, Bernhard},
+	editor = {Quiñonero-Candela, Joaquin and Sugiyama, Masashi and Schwaighofer, Anton and Lawrence, Neil D.},
+	month = dec,
+	year = {2008},
+	doi = {10.7551/mitpress/9780262170055.003.0008},
+	pages = {0},
+}
+
+@misc{cuturi_sinkhorn_2013,
+	title = {Sinkhorn {Distances}: {Lightspeed} {Computation} of {Optimal} {Transportation} {Distances}},
+	shorttitle = {Sinkhorn {Distances}},
+	url = {http://arxiv.org/abs/1306.0895},
+	doi = {10.48550/arXiv.1306.0895},
+	abstract = {Optimal transportation distances are a fundamental family of parameterized distances for histograms. Despite their appealing theoretical properties, excellent performance in retrieval tasks and intuitive formulation, their computation involves the resolution of a linear program whose cost is prohibitive whenever the histograms' dimension exceeds a few hundreds. We propose in this work a new family of optimal transportation distances that look at transportation problems from a maximum-entropy perspective. We smooth the classical optimal transportation problem with an entropic regularization term, and show that the resulting optimum is also a distance which can be computed through Sinkhorn-Knopp's matrix scaling algorithm at a speed that is several orders of magnitude faster than that of transportation solvers. We also report improved performance over classical optimal transportation distances on the MNIST benchmark problem.},
+	urldate = {2023-06-27},
+	publisher = {arXiv},
+	author = {Cuturi, Marco},
+	month = jun,
+	year = {2013},
+	note = {arXiv:1306.0895 [stat]},
+	keywords = {Statistics - Machine Learning},
+}
+
+@book{villani_optimal_2009,
+	address = {Berlin, Heidelberg},
+	series = {Grundlehren der mathematischen {Wissenschaften}},
+	title = {Optimal {Transport}},
+	volume = {338},
+	isbn = {9783540710493 9783540710509},
+	url = {http://link.springer.com/10.1007/978-3-540-71050-9},
+	urldate = {2023-06-27},
+	publisher = {Springer},
+	author = {Villani, Cédric},
+	editor = {Berger, M. and Eckmann, B. and De La Harpe, P. and Hirzebruch, F. and Hitchin, N. and Hörmander, L. and Kupiainen, A. and Lebeau, G. and Ratner, M. and Serre, D. and Sinai, Ya. G. and Sloane, N. J. A. and Vershik, A. M. and Waldschmidt, M.},
+	year = {2009},
+	doi = {10.1007/978-3-540-71050-9},
+	keywords = {Monge-Kantorovich problem, Optimal transport, Riemannian geometry, curvature, dynamical systems, partial differential equations},
+}
+
 @article{hill_bayesian_2011,
 	title = {Bayesian {Nonparametric} {Modeling} for {Causal} {Inference}},
 	volume = {20},
