--- a/references.bib
+++ b/references.bib
@@ -1,4 +1,48 @@
 
+@book{van_der_laan_unified_2003,
+	address = {New York, NY},
+	series = {Springer {Series} in {Statistics}},
+	title = {Unified {Methods} for {Censored} {Longitudinal} {Data} and {Causality}},
+	isbn = {9781441930552 9780387217000},
+	url = {http://link.springer.com/10.1007/978-0-387-21700-0},
+	urldate = {2023-07-04},
+	publisher = {Springer},
+	author = {Van Der Laan, Mark J. and Robins, James M.},
+	year = {2003},
+	doi = {10.1007/978-0-387-21700-0},
+	keywords = {Censoring, Computerassistierte Detektion, Estimator, Maxima, Radiologieinformationssystem, Regression analysis, Survival analysis, data analysis, linear regression, statistics},
+}
+
+@misc{tibshirani_grf_2023,
+	title = {grf: {Generalized} {Random} {Forests}},
+	copyright = {GPL-3},
+	shorttitle = {grf},
+	url = {https://cran.r-project.org/web/packages/grf/index.html},
+	abstract = {Forest-based statistical estimation and inference. GRF provides non-parametric methods for heterogeneous treatment effects estimation (optionally using right-censored outcomes, multiple treatment arms or outcomes, or instrumental variables), as well as least-squares regression, quantile regression, and survival regression, all with support for missing covariates.},
+	urldate = {2023-07-03},
+	author = {Tibshirani, Julie and Athey, Susan and Friedberg, Rina and Hadad, Vitor and Hirshberg, David and Miner, Luke and Sverdrup, Erik and Wager, Stefan and Wright, Marvin},
+	month = may,
+	year = {2023},
+	keywords = {CausalInference, Econometrics, MachineLearning, MissingData},
+}
+
+@article{reeve_adaptive_2021,
+	title = {Adaptive transfer learning},
+	volume = {49},
+	issn = {0090-5364, 2168-8966},
+	url = {https://projecteuclid.org/journals/annals-of-statistics/volume-49/issue-6/Adaptive-transfer-learning/10.1214/21-AOS2102.full},
+	doi = {10.1214/21-AOS2102},
+	abstract = {In transfer learning, we wish to make inference about a target population when we have access to data both from the distribution itself, and from a different but related source distribution. We introduce a flexible framework for transfer learning in the context of binary classification, allowing for covariate-dependent relationships between the source and target distributions that are not required to preserve the Bayes decision boundary. Our main contributions are to derive the minimax optimal rates of convergence (up to poly-logarithmic factors) in this problem, and show that the optimal rate can be achieved by an algorithm that adapts to key aspects of the unknown transfer relationship, as well as the smoothness and tail parameters of our distributional classes. This optimal rate turns out to have several regimes, depending on the interplay between the relative sample sizes and the strength of the transfer relationship, and our algorithm achieves optimality by careful, decision tree-based calibration of local nearest-neighbour procedures.},
+	number = {6},
+	urldate = {2023-07-03},
+	journal = {The Annals of Statistics},
+	author = {Reeve, Henry W. J. and Cannings, Timothy I. and Samworth, Richard J.},
+	month = dec,
+	year = {2021},
+	keywords = {62C20, 62G20, 62G99, decision trees, minimax, nearest neighbours, nonparametric, transfer learning, ‎classification‎},
+	pages = {3618--3649},
+}
+
 @misc{athey_estimating_2019,
 	title = {Estimating {Treatment} {Effects} with {Causal} {Forests}: {An} {Application}},
 	shorttitle = {Estimating {Treatment} {Effects} with {Causal} {Forests}},
